# dupfilter

./: LICENSE  Readme.md  requirements.txt  setup.cfg  setup.py
dupfilter/: __init__.py
dupfilter/filter/: __init__.py  bloomfilter.py  setfilter.py  stringfilter.py
dupfilter/filter/file/: __init__.py
dupfilter/filter/memory/: __init__.py
dupfilter/filter/redis/: __init__.py  bloomfilter.py  setfilter.py  stringfilter.py
dupfilter/filters/: __init__.py  file.py  memory.py
dupfilter/filters/file/: __init__.py
dupfilter/filters/memory/: __init__.py
dupfilter/filters/redis/: __init__.py  bloomfilter.py  setfilter.py  sortedsetfilter.py  stringfilter.py
dupfilter/filters/sql/: __init__.py  mysql.py  oracle.py  sqlite.py
dupfilter/utils/: __init__.py
