[metadata]
name = dupfilter
version = 0.0.3
author = kusen
author_email = 1194542196@qq.com
description = 去重过滤器,提供常见的去重方案，开发便捷、性能极高。
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

url = https://github.com/kusen-alpha/dupfilter
platforms = any
project_urls =
    Bug Tracker = https://github.com/kusen-alpha/dupfilter/issues
    Documentation = https://github.com/kusen-alpha/dupfilter/blob/master/README.md
    Source Code = https://github.com/kusen-alpha/dupfilter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:

install_requires =
    cachetools